--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,23 @@
     transform: rotate(360deg);
   }
 }
+
+/* src/App.css */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
+nav ul li a {
+  color: #61dafb;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
